# million-prescient-trees

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
benches/: benchmark.rs
docs/: echo.md
scripts/: guess.py  metadata.py
src/: echo.rs  hash.rs  helpers.rs  interactive.rs  lib.rs  main.rs  montecarlo.rs  train.rs
src/ai/: always_zero_agent.rs  echo_ai.rs  human_player.rs  mod.rs  random_agent.rs  textures.rs
src/cfr/: context.rs  decision.rs  decision_index.rs  generate.rs  hidden_index.rs  mod.rs  phase.rs  reveal_index.rs  train.rs
src/game/: battlefield.rs  choice.rs  creature.rs  creature_choice.rs  edict.rs  gametree.rs  infoset.rs  known_state.rs  known_state_summary.rs  mod.rs  other_types.rs  simulate.rs  status_effect.rs  types.rs
src/helpers/: bitfield.rs  bitops.rs  choose.rs  itertools.rs  mod.rs  pair.rs  ranged.rs  subpair.rs  swap.rs  try_from_iter.rs  upair.rs
