[package]
name = "echo"
version = "0.1.0"
authors = ["Matei Adriel <rafaeladriel11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.12.0", features=["allocator_api"] }
rayon = "1.7.0"
rand = "0.8.5"
dialoguer = "0.10.2"
indicatif = "0.17.2"
once_cell = "1.18.0"
itertools = "0.11.0"
derive_more = "0.99.17"
fixed = "1.23.1"
paste = "1.0.14"

[profile.release]
# debug = true
lto = true
