[package]
name = "echo"
version = "0.1.0"
authors = ["Matei Adriel <rafaeladriel11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.12.0", features=["allocator_api"] }
rayon = "1.7.0"
rand = "0.8.5"
dialoguer = "0.10.2"
indicatif = "0.17.2"
once_cell = "1.18.0"
itertools = "0.11.0"
derive_more = "0.99.17"
paste = "1.0.14"
egui = "0.22.0"
eframe = { version = "0.22.0", features=["wayland"] }
serde = "1.0.182"
image = {version = "0.24.6", features=["jpeg", "png"] }
egui_extras = { version = "0.22.0", features=["image"] }
egui_dock = "0.6.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
# debug = true
lto = true
